Fix width category images on mobile

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -41,6 +41,7 @@ h3 {
 
 picture {
   display: flex;
+  width: 100%;
 }
 
 .container {
